--- a/Frontend Development/Day19-react/src/index.scss
+++ b/Frontend Development/Day19-react/src/index.scss
@@ -1,3 +1,12 @@
 h1 {
   color: red;
 }
+
+.button {
+  background-color: teal;
+  color: white;
+  border-radius: 6px;
+  padding: 10px 20px;
+  outline: none;
+  border: none;
+}
